style: add colors

--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -3,6 +3,12 @@
 // Ex.: color: $white;
 // * If you want to use more colors tonality, use $blue-100, $blue-200, etc.:
 // ==========================================================================
-$white: #fff;
-$black: #000;
 $transparent: transparent;
+$orange: #ff9000;
+$white:#f4ede8;
+$gray:#999591;
+$gray-hard:#666360;
+$shape:#3e3b47;
+$black-medium:#28262e;
+$background:#312e38;
+$inputs:#232129;
