style: add font

--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -22,7 +22,7 @@ $border-3: 0.18rem;
 // ? Font Type
 // Ex.: font-family: $font-sans;
 // ==========================================================================
-$font-sans: arial, sans-serif;
+$font-sans: 'Roboto Slab', arial, sans-serif;
 
 // ==========================================================================
 // ? Font Weight
