--- a/src/assets/sass/base/_global.scss
+++ b/src/assets/sass/base/_global.scss
@@ -1,3 +1,6 @@
 // ==========================================================================
 // Global changes
 // ==========================================================================
+body {
+  font-family: $font-sans;
+}
