chore: add feather icons call and new border radius

--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -17,6 +17,7 @@ $border-nome: 0;
 $border-1: 0.06rem;
 $border-2: 0.12rem;
 $border-3: 0.18rem;
+$border-4: 0.4375rem;
 
 // ==========================================================================
 // ? Font Type
