--- a/src/assets/sass/base/_global.scss
+++ b/src/assets/sass/base/_global.scss
@@ -4,3 +4,15 @@
 body {
   font-family: $font-sans;
 }
+
+body,
+html,
+.section {
+  height: 100%;
+}
+
+.section {
+  min-height: 100vh;
+  width: 100%;
+  background: $background;
+}
